2024-06-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/configure/configure.exe: Needs to be updated,
	because header files are hardcoded in it :(.
	* VisualMagick/configure/configure.cpp: dependency to core_rl_zlib_.lib
	is also configured in C source code - too bad!

	* coders/ora.c: Remove library include hack. Configure.exe should
	do the job.

2024-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.c: Also need to enable ORA for HasLIBZIP

	* coders/ora.c: Change back to POSIX file format. Fix syntax
	errors so code compiles with libzip.

2024-06-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* zlib/contrib/minizip/unzip.c
	zlib/contrib/minizip/unzip.h: Export unzip API
	to DLL calls.

	* coders/Makefile.am: Add dependency to zlib for
	ORA DLL module.

	* coders/ora.c: This version is prepared for Linux
	using libzip.lib.

	* configure.ac: Look for presence of libzip.

	* VisualMagick/configure/configure.cpp: dependency
	to zlib is configured in C source code - too bad!

	* coders/Makefile.am: Missing reference to ora.c.

2024-06-22  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/zlib/LIBRARY.txt: Remove unwanted
	source files from DLL build ioapi.c, iowin32.c,
	miniunz.c, minizip.c, mztools.c, zip.c.

2024-06-16  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/aai.c: Misleading typo fix.

2024-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: When testing for libxml2, also test
	libxml/xmlversion.h and libxml/xmlmemory.h.

	* coders/url.c: Depend on <libxml/xmlversion.h>. Use
	LIBXML_HTTP_ENABLED and LIBXML_FTP_ENABLED.

2024-06-15  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/magick/magick_config.h.in: Add HasUNZIP.
	* coders/ora.c: Include "contrib/minizip/unzip.h" only
	when HasUNZIP is defined.

2024-06-14  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/ora.c: Add dependency to HasUNZIP.

	* VisualMagick/zlib/contrib/minizip/LIBRARY.txt:
