@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x282500
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 28,25,0
-#define MagickChangeDate   "20240623"
-#define MagickReleaseDate  "snapshot-20240623"
+#define MagickChangeDate   "20240626"
+#define MagickReleaseDate  "snapshot-20240626"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
